# ptc-mcp

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
docs/: INSPECT-TOOL.md  PROGRAMMATIC-EXECUTOR.md  SPEC.md
src/ptc_mcp/: __init__.py  __main__.py  config.py  errors.py  executor.py  registry.py  server.py
tests/: mock_server.py  test_config.py  test_executor.py  test_integration.py  test_registry.py
